# osu-mutual-finder

./: .gitignore  LICENSE.md  README.md  cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yaml
electron/: events.ts  main.ts  preload.ts  tsconfig.json  utils.ts
server/: .dev.env  Cargo.toml
server/migrations/2022-11-27-151554_users/: up.sql
server/migrations/2022-11-27-160701_sessions/: down.sql  up.sql
server/src/: api.rs  database.rs  main.rs  models.rs  schema.rs  utils.rs
server/src/middlewares/: session.rs
server/src/models/: mod.rs  osu.rs  server.rs  user.rs
server/src/modelsold/: mod.rs  session.rs
server/src/routes/: auth.rs  mod.rs  mutuals.rs
server/src/routes/auth/: authorize.rs  login.rs  mod.rs  refresh.rs
src/: App.vue  animation.ts  env.d.ts  index.css  main.ts  throttle.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: auth.ts  cookies.ts  friends.ts  user.ts
src/components/: AppCheckbox.vue  AppInput.vue  AppList.vue  AppNotification.vue  AppRadio.vue  AppReturn.vue  AppSelect.vue  AppSide.vue  AppTitleBar.vue  AppVersion.vue  Country.vue  DevRouter.vue  User.vue
src/components/Icons/: Back.vue  Close.vue  Login.vue  Maximize.vue  Spinner.vue  UnMaximize.vue
src/components/Login/: LoginMutuals.vue
src/components/Settings/: SettingsAddFriend.vue  SettingsBase.vue  SettingsBlacklist.vue  SettingsCountries.vue  SettingsCountriesCountry.vue  SettingsCountriesGlobal.vue  SettingsDelay.vue  SettingsMode.vue  SettingsOther.vue  SettingsPageLimit.vue  SettingsToggle.vue
src/components/Ui/: BaseButton.vue  BaseButtonIcon.vue  BaseCheckbox.vue  BaseInput.vue  BaseInputNumber.vue  BaseRadio.vue
src/components/icons/: Back.vue  Clear.vue  Login.vue  Maximize.vue  Minimize.vue  Settings.vue  Spinner.vue  UnMaximize.vue
src/components/ui/: BaseButton.vue  BaseInput.vue  BaseSuspense.vue  ButtonIcon.vue
src/plugin/: Notification.vue  notification.ts
src/router/: index.ts
src/store/: auth.ts  index.ts  limit.ts  settings.ts  user.ts
src/views/: Login.vue  Mutuals.vue  Settings.vue  Verify.vue
