[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.7"
tokio = { version = "1.19.2", features=["full"] }
tokio-postgres = "0.7.6"
serde = { version = "1", features=["derive"] }
reqwest = { version = "0.11.11", features=["json"] }
