[package]
name = "app"
version = "1.3.9"
description = "A way to find mutuals in osu!"
authors = ["sibyl666"]
license = "MIT"
repository = "https://github.com/sibyl666/osu-mutual-finder"
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0.89"
serde = { version = "1.0.147", features = ["derive"] }
tauri = { version = "1.2.2", features = ["devtools", "http-request", "process-relaunch", "shell-open", "updater", "window-close", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize"] }
window-shadows = "0.2.0"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true  # Automatically strip symbols from the binary.

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
